# contradiction-detection-system

./: .gitignore  README.md  git-workflow.md  requirements.txt
backend/: .gitignore  Dockerfile  README.md  configs.py  database.py  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railway.toml
backend/api/: configs.py  database.py  main.py  routes.py  schemas.py
backend/api/models/: __init__.py  document.py  text.py
backend/app/: Dockerfile  configs.py  database.py  routes.py  schemas.py  storage.py
backend/app/models/: __init__.py  document.py
backend/data_layer/: __init__.py  chunker.py
backend/data_layer/test/: test.py
backend/datalayer/: extractor.py  parser.py
backend/datalayer/test/: test.py
backend/models/: document.py
backend/nlp_layer/: __init__.py  embeddings.py  gemini_client.py  search.py  verifier.py
docs/: 01_conceptual_framework.md  02_technical_architecture.md  test.txt
frontend/: railway.toml
frontend/src/: App.css  App.tsx
frontend/src/components/inputs/: TextInputCard.tsx  VitalsUploadCard.tsx
frontend/src/components/outputs/: ExplanationCard.tsx  RiskScoreCard.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
