[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "google-generativeai>=0.8.6",
    "minio>=7.2.20",
    "numpy>=2.4.2",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "sqlmodel>=0.0.33",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "data_layer*", "nlp_layer*"]
